feat: content migration

--- a/changelog/authors.yml
+++ b/changelog/authors.yml
@@ -1,17 +1,5 @@
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
-
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
-
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
+Henry:
+  name: Henry
+  title: Lead Dev @ RSS3
+  url: https://github.com/henryqw
+  image_url: https://lh3.googleusercontent.com/_TIdjmTTDeqD4O7tslAw0_BoWSL9Oqw5zL-o0G8OL9BXzzmZvmQ7urInrE85nC-SgbbEKSakx4j97dNmvQRykDlSiK8qxJ9nkOW8rA=w600
