--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prism-react-renderer": "^1.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "swagger-ui-react": "^4.12.0",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
