--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-beta.21",
-    "@docusaurus/types": "^2.0.0-beta.21",
+    "@docusaurus/core": "2.0.0-beta.14",
+    "@docusaurus/types": "2.0.0-beta.14",
+    "@docusaurus/utils": "2.0.0-beta.14",
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
     "docusaurus-preset-openapi": "0.4.0",
@@ -23,6 +24,15 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids"
+  },
+  "resolutions": {
+    "@docusaurus/core": "2.0.0-beta.14",
+    "@docusaurus/preset-classic": "2.0.0-beta.14",
+    "@docusaurus/mdx-loader": "2.0.0-beta.14",
+    "@docusaurus/plugin-content-docs": "2.0.0-beta.14",
+    "@docusaurus/types": "2.0.0-beta.14",
+    "@docusaurus/utils-validation": "2.0.0-beta.14",
+    "@docusaurus/utils": "2.0.0-beta.14"
   },
   "browserslist": {
     "production": [
