feat: update dev log

--- a/devlog/authors.yml
+++ b/devlog/authors.yml
@@ -1,5 +1,6 @@
 Henry:
   name: Henry
   title: Lead Dev @ RSS3
+  email: henry@rss3.io
   url: https://github.com/henryqw
   image_url: https://lh3.googleusercontent.com/_TIdjmTTDeqD4O7tslAw0_BoWSL9Oqw5zL-o0G8OL9BXzzmZvmQ7urInrE85nC-SgbbEKSakx4j97dNmvQRykDlSiK8qxJ9nkOW8rA=w600
