--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "doc",
+  "name": "rss3-doc",
   "version": "0.0.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.14",
     "@docusaurus/types": "2.0.0-beta.14",
