--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@docusaurus/types": "2.0.0-beta.14",
     "@docusaurus/utils": "2.0.0-beta.14",
     "@mdx-js/react": "^1.6.21",
+    "antd": "^4.21.0",
     "clsx": "^1.1.1",
     "docusaurus-preset-openapi": "0.4.0",
     "prism-react-renderer": "^1.2.1",
