--- a/package.json
+++ b/package.json
@@ -1,106 +1,106 @@
 {
-  "name": "rss3-doc",
-  "version": "0.4.0",
-  "private": false,
-  "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.14",
-    "@docusaurus/types": "2.0.0-beta.14",
-    "@docusaurus/utils": "2.0.0-beta.14",
-    "@mdx-js/react": "^1.6.21",
-    "antd": "^4.21.0",
-    "clsx": "^1.1.1",
-    "docusaurus-preset-openapi": "0.4.0",
-    "prism-react-renderer": "^1.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "url": "^0.11.0"
-  },
-  "scripts": {
-    "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "build": "docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "export USE_SSH=true && docusaurus deploy",
-    "clear": "docusaurus clear",
-    "serve": "docusaurus serve",
-    "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids",
-    "lint": "eslint src --ext .js,.jsx --fix"
-  },
-  "resolutions": {
-    "@docusaurus/core": "2.0.0-beta.14",
-    "@docusaurus/preset-classic": "2.0.0-beta.14",
-    "@docusaurus/mdx-loader": "2.0.0-beta.14",
-    "@docusaurus/plugin-content-docs": "2.0.0-beta.14",
-    "@docusaurus/types": "2.0.0-beta.14",
-    "@docusaurus/utils-validation": "2.0.0-beta.14",
-    "@docusaurus/utils": "2.0.0-beta.14"
-  },
-  "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "eslintConfig": {
-    "plugins": [
-      "react",
-      "@docusaurus"
-    ],
-    "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended",
-      "plugin:@docusaurus/recommended",
-      "plugin:prettier/recommended",
-      "prettier"
-    ],
-    "parserOptions": {
-      "ecmaFeatures": {
-        "jsx": true
-      },
-      "ecmaVersion": "latest",
-      "sourceType": "module"
+    "browserslist": {
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ],
+        "production": [
+            ">0.5%",
+            "not dead",
+            "not op_mini all"
+        ]
     },
-    "env": {
-      "node": true,
-      "browser": true,
-      "es2021": true,
-      "jest": true
+    "dependencies": {
+        "@docusaurus/core": "2.0.0-beta.14",
+        "@docusaurus/types": "2.0.0-beta.14",
+        "@docusaurus/utils": "2.0.0-beta.14",
+        "@mdx-js/react": "^1.6.21",
+        "antd": "^4.21.0",
+        "clsx": "^1.1.1",
+        "docusaurus-preset-openapi": "0.4.0",
+        "prism-react-renderer": "^1.2.1",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "url": "^0.11.0"
     },
-    "settings": {
-      "react": {
-        "version": "detect"
-      }
-    }
-  },
-  "eslintIgnore": [
-    ".docusaurus",
-    ".vscode",
-    "build",
-    "node_modules"
-  ],
-  "prettier": {
-    "printWidth": 90,
-    "tabWidth": 4,
-    "useTabs": false,
-    "trailingComma": "all",
-    "singleQuote": true,
-    "semi": true,
-    "jsxSingleQuote": true,
-    "jsxBracketSameLine": true
-  },
-  "devDependencies": {
-    "@docusaurus/eslint-plugin": "^2.0.0-beta.21",
-    "eslint": "^8.18.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.30.0",
-    "prettier": "^2.7.1"
-  }
+    "devDependencies": {
+        "@docusaurus/eslint-plugin": "^2.0.0-beta.21",
+        "eslint": "^8.18.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react": "^7.30.0",
+        "prettier": "^2.7.1"
+    },
+    "eslintConfig": {
+        "env": {
+            "browser": true,
+            "es2021": true,
+            "jest": true,
+            "node": true
+        },
+        "extends": [
+            "eslint:recommended",
+            "plugin:react/recommended",
+            "plugin:@docusaurus/recommended",
+            "plugin:prettier/recommended",
+            "prettier"
+        ],
+        "parserOptions": {
+            "ecmaFeatures": {
+                "jsx": true
+            },
+            "ecmaVersion": "latest",
+            "sourceType": "module"
+        },
+        "plugins": [
+            "react",
+            "@docusaurus"
+        ],
+        "settings": {
+            "react": {
+                "version": "detect"
+            }
+        }
+    },
+    "eslintIgnore": [
+        ".docusaurus",
+        ".vscode",
+        "build",
+        "node_modules"
+    ],
+    "name": "rss3-doc",
+    "prettier": {
+        "jsxBracketSameLine": true,
+        "jsxSingleQuote": true,
+        "printWidth": 90,
+        "semi": true,
+        "singleQuote": true,
+        "tabWidth": 4,
+        "trailingComma": "all",
+        "useTabs": false
+    },
+    "private": false,
+    "resolutions": {
+        "@docusaurus/core": "2.0.0-beta.14",
+        "@docusaurus/mdx-loader": "2.0.0-beta.14",
+        "@docusaurus/plugin-content-docs": "2.0.0-beta.14",
+        "@docusaurus/preset-classic": "2.0.0-beta.14",
+        "@docusaurus/types": "2.0.0-beta.14",
+        "@docusaurus/utils": "2.0.0-beta.14",
+        "@docusaurus/utils-validation": "2.0.0-beta.14"
+    },
+    "scripts": {
+        "build": "docusaurus build",
+        "clear": "docusaurus clear",
+        "deploy": "export USE_SSH=true && docusaurus deploy",
+        "docusaurus": "docusaurus",
+        "lint": "eslint src --ext .js,.jsx --fix",
+        "serve": "docusaurus serve",
+        "start": "docusaurus start",
+        "swizzle": "docusaurus swizzle",
+        "write-heading-ids": "docusaurus write-heading-ids",
+        "write-translations": "docusaurus write-translations"
+    },
+    "version": "0.4.0"
 }
