--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "devDependencies": {
         "@docusaurus/eslint-plugin": "^2.0.0-beta.21",
+        "dayjs": "^1.11.3",
         "eslint": "^8.18.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
@@ -99,8 +100,7 @@
         "serve": "docusaurus serve",
         "start": "docusaurus start",
         "swizzle": "docusaurus swizzle",
-        "write-heading-ids": "docusaurus write-heading-ids",
-        "write-translations": "docusaurus write-translations"
+        "log": "node -e \"require('./devlog/util/helper.js').createNewLog()\""
     },
     "version": "0.4.0"
 }
