--- a/package.json
+++ b/package.json
@@ -1,4 +1,18 @@
 {
+    "name": "rss3-doc",
+    "version": "0.4.0",
+    "private": false,
+    "scripts": {
+        "build": "docusaurus build",
+        "clear": "docusaurus clear",
+        "deploy": "export USE_SSH=true && docusaurus deploy",
+        "docusaurus": "docusaurus",
+        "lint": "eslint src --ext .js,.jsx --fix",
+        "log": "node -e \"require('./devlog/util/helper.js').createNewLog()\"",
+        "serve": "docusaurus serve",
+        "start": "docusaurus start",
+        "swizzle": "docusaurus swizzle"
+    },
     "browserslist": {
         "development": [
             "last 1 chrome version",
@@ -10,6 +24,61 @@
             "not dead",
             "not op_mini all"
         ]
+    },
+    "prettier": {
+        "jsxBracketSameLine": true,
+        "jsxSingleQuote": true,
+        "printWidth": 90,
+        "semi": true,
+        "singleQuote": true,
+        "tabWidth": 4,
+        "trailingComma": "all",
+        "useTabs": false
+    },
+    "eslintConfig": {
+        "env": {
+            "es2021": true,
+            "jest": true,
+            "node": true
+        },
+        "parserOptions": {
+            "ecmaFeatures": {
+                "jsx": true
+            },
+            "ecmaVersion": "latest",
+            "sourceType": "module"
+        },
+        "settings": {
+            "react": {
+                "version": "detect"
+            }
+        },
+        "plugins": [
+            "react",
+            "@docusaurus"
+        ],
+        "extends": [
+            "eslint:recommended",
+            "plugin:react/recommended",
+            "plugin:@docusaurus/recommended",
+            "plugin:prettier/recommended",
+            "prettier"
+        ]
+    },
+    "eslintIgnore": [
+        ".docusaurus",
+        ".vscode",
+        "build",
+        "node_modules"
+    ],
+    "resolutions": {
+        "@docusaurus/core": "2.0.0-beta.14",
+        "@docusaurus/mdx-loader": "2.0.0-beta.14",
+        "@docusaurus/plugin-content-docs": "2.0.0-beta.14",
+        "@docusaurus/preset-classic": "2.0.0-beta.14",
+        "@docusaurus/types": "2.0.0-beta.14",
+        "@docusaurus/utils": "2.0.0-beta.14",
+        "@docusaurus/utils-validation": "2.0.0-beta.14"
     },
     "dependencies": {
         "@docusaurus/core": "2.0.0-beta.14",
@@ -32,75 +101,5 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.30.0",
         "prettier": "^2.7.1"
-    },
-    "eslintConfig": {
-        "env": {
-            "browser": true,
-            "es2021": true,
-            "jest": true,
-            "node": true
-        },
-        "extends": [
-            "eslint:recommended",
-            "plugin:react/recommended",
-            "plugin:@docusaurus/recommended",
-            "plugin:prettier/recommended",
-            "prettier"
-        ],
-        "parserOptions": {
-            "ecmaFeatures": {
-                "jsx": true
-            },
-            "ecmaVersion": "latest",
-            "sourceType": "module"
-        },
-        "plugins": [
-            "react",
-            "@docusaurus"
-        ],
-        "settings": {
-            "react": {
-                "version": "detect"
-            }
-        }
-    },
-    "eslintIgnore": [
-        ".docusaurus",
-        ".vscode",
-        "build",
-        "node_modules"
-    ],
-    "name": "rss3-doc",
-    "prettier": {
-        "jsxBracketSameLine": true,
-        "jsxSingleQuote": true,
-        "printWidth": 90,
-        "semi": true,
-        "singleQuote": true,
-        "tabWidth": 4,
-        "trailingComma": "all",
-        "useTabs": false
-    },
-    "private": false,
-    "resolutions": {
-        "@docusaurus/core": "2.0.0-beta.14",
-        "@docusaurus/mdx-loader": "2.0.0-beta.14",
-        "@docusaurus/plugin-content-docs": "2.0.0-beta.14",
-        "@docusaurus/preset-classic": "2.0.0-beta.14",
-        "@docusaurus/types": "2.0.0-beta.14",
-        "@docusaurus/utils": "2.0.0-beta.14",
-        "@docusaurus/utils-validation": "2.0.0-beta.14"
-    },
-    "scripts": {
-        "build": "docusaurus build",
-        "clear": "docusaurus clear",
-        "deploy": "export USE_SSH=true && docusaurus deploy",
-        "docusaurus": "docusaurus",
-        "lint": "eslint src --ext .js,.jsx --fix",
-        "serve": "docusaurus serve",
-        "start": "docusaurus start",
-        "swizzle": "docusaurus swizzle",
-        "log": "node -e \"require('./devlog/util/helper.js').createNewLog()\""
-    },
-    "version": "0.4.0"
+    }
 }
