--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "build": "docusaurus build --no-minify",
         "clear": "docusaurus clear",
-        "deploy": "export USE_SSH=true && docusaurus deploy",
+        "deploy": "export USE_SSH=true && docusaurus deploy --no-minify",
         "docusaurus": "docusaurus",
         "lint": "eslint src --ext .js,.jsx --fix",
         "log": "node -e \"require('./devlog/util/helper.js').createNewLog()\"",
@@ -86,9 +86,10 @@
         "@docusaurus/types": "2.0.0-beta.14",
         "@docusaurus/utils": "2.0.0-beta.14",
         "@mdx-js/react": "^1.6.21",
+        "@monaco-editor/react": "^4.4.5",
         "antd": "^4.21.0",
         "clsx": "^1.1.1",
-        "docusaurus-preset-openapi": "0.4.0",
+        "docusaurus-preset-openapi": "^0.5.0",
         "prism-react-renderer": "^1.2.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
